<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cait.lagrand_pset6.ResultActivity"
    android:orientation="vertical">

    <!--Include toolbar -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/advancedSearchView"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/randomButton"
            android:id="@+id/searchRadioGroup">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/random"
                android:id="@+id/randomButton"
                android:tag="random.php"
                android:checked="false"
                android:onClick="handleSearch"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alcoholic"
                android:id="@+id/alcoholicButton"
                android:tag="filter.php?a=Alcoholic"
                android:checked="false"
                android:onClick="handleSearch"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_alcoholic"
                android:id="@+id/nonAlcoholicButton"
                android:tag="filter.php?a=Non Alcoholic"
                android:checked="false"
                android:onClick="handleSearch"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:id="@+id/categoryButton"
                android:tag="c"
                android:checked="false"
                android:onClick="handleSearch"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/glass"
                android:id="@+id/glassButton"
                android:tag="g"
                android:checked="false"
                android:onClick="handleSearch"/>
        </RadioGroup>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:id="@+id/advancedSearchScrollView">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:id="@+id/extraGroupButton"
                android:layout_marginBottom="20dp"/>

        </ScrollView>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultListView"/>

</LinearLayout>
